# machofile

./: .gitignore  API_documentation_machofile.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  __init__.py  machofile-cli.py  machofile.py  pyproject.toml
doc/: API_documentation_machofile.md
